--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ subprojects { project ->
         maven {
             url = "http://nexus.sdp.nd/nexus/content/groups/android-public/"
         }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 
     buildscript {
