--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,20 @@ subprojects { project ->
     version = VERSION_NAME
 
     repositories {
-        maven {
+        jcenter()
+       /* maven {
             url = "http://nexus.sdp.nd/nexus/content/groups/android-public/"
-        }
+        }*/
+        maven { url 'http://localhost:8081/nexus/content/groups/android/' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 
     buildscript {
         repositories {
-            maven {
+            jcenter()
+      /*      maven {
                 url = "http://nexus.sdp.nd/nexus/content/groups/android-public/"
-            }
+            }*/
         }
         dependencies {
             classpath 'com.android.tools.build:gradle:1.5.0'
