--- a/.configs/gradle/dependencies.gradle
+++ b/.configs/gradle/dependencies.gradle
@@ -13,15 +13,15 @@ ext {
     //Libraries
     androidSupportVersion = "23.1.1"
     daggerVersion = '2.0'
-    butterKnifeVersion = '6.0.0'
-    rxJavaVersion = '1.0.14'
-    rxAndroidVersion = '1.0.1'
-    rxLifecycleVersion = '0.3.0'
-    rxBindingVersion = '0.2.0'
+    butterKnifeVersion = '7.0.1'
+    rxJavaVersion = '1.1.3'
+    rxAndroidVersion = '1.1.0'
+    rxBindingVersion = '0.4.0'
     javaxAnnotationVersion = '10.0-b28'
     superToastsVersion = "1.3.4"
     retrofitVersion = "1.9.0"
-    okHttpVersion = "2.4.0"
+    retrofit2Version = "2.0.1"
+    okHttpVersion = "3.2.0"
     jacksonVersion = "2.4.2"
     nineOldAndroidVersion = "2.4.0"
 
@@ -34,7 +34,7 @@ ext {
     testingSupportLibVersion = '0.1'
 
     //Hermes
-    hermesVersion = '2.2.1-rc3'
+    hermesVersion = '2.2.2'
 
     libs = [
             supportV4          : "com.android.support:support-v4:${androidSupportVersion}",
@@ -49,15 +49,16 @@ ext {
             butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
             rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
             rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
-            rxLifecycle        : "com.trello:rxlifecycle:${rxLifecycleVersion}",
             rxBinding          : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
-            rxComponent        : "com.trello:rxlifecycle-components:${rxLifecycleVersion}",
             javaxAnnotation    : "org.glassfish:javax.annotation:${javaxAnnotationVersion}",
             superToasts        : "com.github.johnpersano:supertoasts:${superToastsVersion}@aar",
             retrofit           : "com.squareup.retrofit:retrofit:${retrofitVersion}",
             retrofitWithJackson: "com.squareup.retrofit:converter-jackson:${retrofitVersion}",
+            retrofit2           : "com.squareup.retrofit2:retrofit:${retrofit2Version}",
+            retrofit2WithJackson: "com.squareup.retrofit2:converter-jackson:${retrofit2Version}",
+            retrofit2RxAdapter: "com.squareup.retrofit2:adapter-rxjava:${retrofit2Version}",
             jacksonDatabind    : "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
-            okHttp             : "com.squareup.okhttp:okhttp:${okHttpVersion}",
+            okHttp             : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
             timber             : "com.jakewharton.timber:timber:3.0.1",
             nineOldAndroid     : "com.nineoldandroids:library:${nineOldAndroidVersion}",
     ]
