--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@
 GROUP=com.sp.video.yi.demo
 VERSION_NAME=0.1-SNAPSHOT
 
-CONFIG_URL=http://git.sdp.nd/android-team/gradle-configs/raw/master
-#CONFIG_URL=https://github.com/sp958857/gradle-configs/raw/master
+#CONFIG_URL=http://git.sdp.nd/android-team/gradle-configs/raw/master
+CONFIG_URL=https://github.com/sp958857/gradle-configs/raw/master
