--- a/.configs/gradle/dependencies.gradle
+++ b/.configs/gradle/dependencies.gradle
@@ -5,12 +5,13 @@
 ext {
     //Android
     androidBuildToolsVersion = "23.0.2"
-    androidMinSdkVersion = getPropertyOrDefault("MIN_SDK_VERSION", 9)
-    androidTargetSdkVersion = getPropertyOrDefault("TARGET_SDK_VERSION", 22)
+    androidMinSdkVersion = getPropertyOrDefault("MIN_SDK_VERSION", 15)
+    androidTargetSdkVersion = getPropertyOrDefault("TARGET_SDK_VERSION", 23)
     androidCompileSdkVersion = 23
     testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
 
     //Libraries
+    multidexVersion = '1.0.1'
     androidSupportVersion = "23.1.1"
     daggerVersion = '2.0'
     butterKnifeVersion = '7.0.1'
@@ -19,9 +20,10 @@ ext {
     rxBindingVersion = '0.4.0'
     javaxAnnotationVersion = '10.0-b28'
     superToastsVersion = "1.3.4"
-    retrofitVersion = "1.9.0"
+    retrofit1Version = "1.9.0"
     retrofit2Version = "2.0.1"
-    okHttpVersion = "3.2.0"
+    okHttp3Version = "3.2.0"
+    okHttp2Version = "2.4.0"
     jacksonVersion = "2.4.2"
     nineOldAndroidVersion = "2.4.0"
 
@@ -37,30 +39,33 @@ ext {
     hermesVersion = '2.2.2'
 
     libs = [
-            supportV4          : "com.android.support:support-v4:${androidSupportVersion}",
-            appcompat          : "com.android.support:appcompat-v7:${androidSupportVersion}",
-            supportDesign      : "com.android.support:design:${androidSupportVersion}",
-            supportAnnotation  : "com.android.support:support-annotations:${androidSupportVersion}",
-            recyclerView       : "com.android.support:recyclerview-v7:${androidSupportVersion}",
-            cardView           : "com.android.support:cardview-v7:${androidSupportVersion}",
+            multidex            : "com.android.support:multidex:${multidexVersion}",
+            supportV4           : "com.android.support:support-v4:${androidSupportVersion}",
+            appcompat           : "com.android.support:appcompat-v7:${androidSupportVersion}",
+            supportDesign       : "com.android.support:design:${androidSupportVersion}",
+            supportAnnotation   : "com.android.support:support-annotations:${androidSupportVersion}",
+            recyclerView        : "com.android.support:recyclerview-v7:${androidSupportVersion}",
+            cardView            : "com.android.support:cardview-v7:${androidSupportVersion}",
 
-            daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger             : "com.google.dagger:dagger:${daggerVersion}",
-            butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
-            rxJava             : "io.reactivex:rxjava:${rxJavaVersion}",
-            rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
-            rxBinding          : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
-            javaxAnnotation    : "org.glassfish:javax.annotation:${javaxAnnotationVersion}",
-            superToasts        : "com.github.johnpersano:supertoasts:${superToastsVersion}@aar",
-            retrofit           : "com.squareup.retrofit:retrofit:${retrofitVersion}",
-            retrofitWithJackson: "com.squareup.retrofit:converter-jackson:${retrofitVersion}",
+            daggerCompiler      : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            dagger              : "com.google.dagger:dagger:${daggerVersion}",
+            butterKnife         : "com.jakewharton:butterknife:${butterKnifeVersion}",
+            rxJava              : "io.reactivex:rxjava:${rxJavaVersion}",
+            rxAndroid           : "io.reactivex:rxandroid:${rxAndroidVersion}",
+            rxBinding           : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
+            javaxAnnotation     : "org.glassfish:javax.annotation:${javaxAnnotationVersion}",
+            superToasts         : "com.github.johnpersano:supertoasts:${superToastsVersion}@aar",
+            retrofit1           : "com.squareup.retrofit:retrofit:${retrofit1Version}",
+            retrofit1WithJackson: "com.squareup.retrofit:converter-jackson:${retrofit1Version}",
             retrofit2           : "com.squareup.retrofit2:retrofit:${retrofit2Version}",
             retrofit2WithJackson: "com.squareup.retrofit2:converter-jackson:${retrofit2Version}",
-            retrofit2RxAdapter: "com.squareup.retrofit2:adapter-rxjava:${retrofit2Version}",
-            jacksonDatabind    : "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
-            okHttp             : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-            timber             : "com.jakewharton.timber:timber:3.0.1",
-            nineOldAndroid     : "com.nineoldandroids:library:${nineOldAndroidVersion}",
+            retrofit2RxAdapter  : "com.squareup.retrofit2:adapter-rxjava:${retrofit2Version}",
+            jacksonDatabind     : "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
+            okHttp3             : "com.squareup.okhttp3:okhttp:${okHttp3Version}",
+            okHttp2             : "com.squareup.okhttp:okhttp:${okHttp2Version}",
+            okHttp3ForRetrofit1 : "com.jakewharton.retrofit:retrofit1-okhttp3-client:1.1.0",
+            timber              : "com.jakewharton.timber:timber:3.0.1",
+            nineOldAndroid      : "com.nineoldandroids:library:${nineOldAndroidVersion}",
     ]
 
     test = [
