--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ subprojects { project ->
 
     repositories {
         jcenter()
-        maven { url = "http://nexus.sdp.nd/nexus/content/groups/android-public/"  }
-//        maven { url 'http://localhost:8081/nexus/content/groups/android/' }
+//        maven { url = "http://nexus.sdp.nd/nexus/content/groups/android-public/"  }
+        maven { url 'http://localhost:8081/nexus/content/groups/android/' }
 //        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 
