--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile project(':vlc-player')
 
     //developframework
-    compile hermes.compat
+//    compile hermes.compat
 
 //    compile libs.okHttp2
     compile libs.okHttp3
@@ -59,12 +59,12 @@ dependencies {
 
 
     //3-party libs for controls or widgets
-    compile 'com.sp.ui.material:material-libs:1.0.0'
-    compile 'com.sp.ui.material:pull-to-collapse:1.0.1'
-    compile 'com.sp.views.adapter:common-adapter:1.0.0'
+//    compile 'com.sp.ui.material:material-libs:1.0.0'
+//    compile 'com.sp.ui.material:pull-to-collapse:1.0.1'
+//    compile 'com.sp.views.adapter:common-adapter:1.0.0'
 
     compile libs.nineOldAndroid
-    compile 'com.fuckhtc:gson:2.1'
+//    compile 'com.fuckhtc:gson:2.1'
 
     compile 'io.netty:netty-all:4.1.0.CR6'
 //    compile 'io.netty:netty-example:4.1.0.CR7'
